Compiler/tests/typing/bad/testfile-bool-1.rs
fn main() { 42 && 41; return; }
